income-expense input designed

--- a/index.html
+++ b/index.html
@@ -34,5 +34,24 @@
         </div>
       </div>
     </div>
+
+    <div class="bottom">
+      <div class="add">
+        <div class="add__container">
+          <select class="add__type">
+            <option value="inc" selected>+</option>
+            <option value="exp">-</option>
+          </select>
+          <input
+            type="text"
+            class="add__description"
+            placeholder="Add Description"
+          />
+          <input type="number" class="add__value" placeholder="Value" />
+          <button class="add__btn"><i class="ion-ios-plus-outline"></i></button>
+        </div>
+      </div>
+      <div class="container"></div>
+    </div>
   </body>
 </html>
