income and expenses lists designed

--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
         <div class="budget__title">
           Available Budget in <span class="budget__title--month">%Month%</span>:
         </div>
-        <div class="budget__value">+ 2.500.00</div>
+        <div class="budget__value">+ 2,500.00</div>
         <div class="budget__income">
           <div class="budget__income--text">Income</div>
           <div class="second-child">
-            <div class="budget__income--value">+ 3.600.00</div>
+            <div class="budget__income--value">+ 3,600.00</div>
             <div class="budget__income--percentage">&nbsp;</div>
           </div>
         </div>
         <div class="budget__expenses">
           <div class="budget__expenses--text">Expenses</div>
           <div class="second-child">
-            <div class="budget__expenses--value">- 1.100.00</div>
+            <div class="budget__expenses--value">- 1,100.00</div>
             <div class="budget__expenses--percentage">31%</div>
           </div>
         </div>
@@ -51,7 +51,70 @@
           <button class="add__btn"><i class="ion-ios-plus-outline"></i></button>
         </div>
       </div>
-      <div class="container"></div>
+
+      <div class="container">
+        <div class="income">
+          <h2 class="income__title">Income</h2>
+
+          <div class="income__list">
+            <div class="item" id="income-0">
+              <div class="item__description">Salary</div>
+              <div class="val-del">
+                <div class="item__value">+ 3,000.00</div>
+                <div class="item__delete">
+                  <button class="item__delete--btn">
+                    <i class="ion-ios-trash-outline"></i>
+                  </button>
+                </div>
+              </div>
+            </div>
+
+            <div class="item" id="income-1">
+              <div class="item__description">Web Page</div>
+              <div class="val-del">
+                <div class="item__value">+ 600.00</div>
+                <div class="item__delete">
+                  <button class="item__delete--btn">
+                    <i class="ion-ios-trash-outline"></i>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="expenses">
+          <h2 class="expenses__title">Expenses</h2>
+
+          <div class="expenses__list">
+            <div class="item" id="income-0">
+              <div class="item__description">Rent</div>
+              <div class="val-del">
+                <div class="item__value">- 700.00</div>
+                <div class="item__percentage">20%</div>
+                <div class="item__delete">
+                  <button class="item__delete--btn">
+                    <i class="ion-ios-trash-outline"></i>
+                  </button>
+                </div>
+              </div>
+            </div>
+
+            <div class="item" id="income-1">
+              <div class="item__description">Food</div>
+              <div class="val-del">
+                <div class="item__value">- 400.00</div>
+                <div class="item__percentage">11%</div>
+                <div class="item__delete">
+                  <button class="item__delete--btn">
+                    <i class="ion-ios-trash-outline"></i>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
