MVC architecture started - Store item into data structure through input field

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script defer src="./app.js"></script>
     <title>Budget Controller</title>
   </head>
+
   <body>
     <div class="top">
       <div class="budget">
@@ -57,7 +58,7 @@
           <h2 class="income__title">Income</h2>
 
           <div class="income__list">
-            <div class="item" id="income-0">
+            <!-- <div class="item" id="income-0">
               <div class="item__description">Salary</div>
               <div class="val-del">
                 <div class="item__value">+ 3,000.00</div>
@@ -79,7 +80,7 @@
                   </button>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
 
@@ -87,7 +88,7 @@
           <h2 class="expenses__title">Expenses</h2>
 
           <div class="expenses__list">
-            <div class="item" id="income-0">
+            <!-- <div class="item" id="income-0">
               <div class="item__description">Rent</div>
               <div class="val-del">
                 <div class="item__value">- 700.00</div>
@@ -111,7 +112,7 @@
                   </button>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
