Display items into lists, fixed empty fields bug and update budget data

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
           <h2 class="income__title">Income</h2>
 
           <div class="income__list">
-            <!-- <div class="item" id="income-0">
+            <!-- 
+            <div class="item" id="income-0">
               <div class="item__description">Salary</div>
               <div class="val-del">
                 <div class="item__value">+ 3,000.00</div>
@@ -88,7 +89,8 @@
           <h2 class="expenses__title">Expenses</h2>
 
           <div class="expenses__list">
-            <!-- <div class="item" id="income-0">
+            <!-- 
+            <div class="item" id="income-0">
               <div class="item__description">Rent</div>
               <div class="val-del">
                 <div class="item__value">- 700.00</div>
