Delete item button funtionality added

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
           <div class="income__list">
             <!-- 
-            <div class="item" id="income-0">
+            <div class="item" id="inc-0">
               <div class="item__description">Salary</div>
               <div class="val-del">
                 <div class="item__value">+ 3,000.00</div>
@@ -71,7 +71,7 @@
               </div>
             </div>
 
-            <div class="item" id="income-1">
+            <div class="item" id="inc-1">
               <div class="item__description">Web Page</div>
               <div class="val-del">
                 <div class="item__value">+ 600.00</div>
@@ -90,7 +90,7 @@
 
           <div class="expenses__list">
             <!-- 
-            <div class="item" id="income-0">
+            <div class="item" id="exp-0">
               <div class="item__description">Rent</div>
               <div class="val-del">
                 <div class="item__value">- 700.00</div>
@@ -103,7 +103,7 @@
               </div>
             </div>
 
-            <div class="item" id="income-1">
+            <div class="item" id="exp-1">
               <div class="item__description">Food</div>
               <div class="val-del">
                 <div class="item__value">- 400.00</div>
