Formatting numbers, display current date and change inout item btn

--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
             placeholder="Add Description"
           />
           <input type="number" class="add__value" placeholder="Value" />
-          <button class="add__btn"><i class="ion-ios-plus-outline"></i></button>
+          <button class="add__btn">
+            <i id="icon" class="ion-ios-plus-outline"></i>
+          </button>
         </div>
       </div>
 
